# ninmu-code

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  TEST_COVERAGE_REPORT.md  install.sh
.git.backup-20260428-160537/: .factory-scm-trigger  COMMIT_EDITMSG  FETCH_HEAD  config  index  opencode  packed-refs
.git.backup-20260428-160537/logs/: HEAD
.git.backup-20260428-160537/logs/refs/: stash
.git.backup-20260428-160537/logs/refs/heads/: main
.git.backup-20260428-160537/logs/refs/heads/docs/: update-outdated-docs
.git.backup-20260428-160537/objects/pack/: pack-3c6407976f94b6bdba27fe0f4125244c72ccf72f.idx  pack-3c6407976f94b6bdba27fe0f4125244c72ccf72f.rev
.git.backup-20260428-160537/refs/: stash
.git.backup-20260428-160537/refs/heads/: main
.git.backup-20260428-160537/refs/heads/docs/: update-outdated-docs
.git.backup-20260428-160537/refs/heads/feat/: tui-refactor
.git.backup-20260428-160537/refs/heads/packaging/: homebrew-npm-installer
.git.backup-20260428-160537/refs/heads/test/: provider-http-integration-tests
.git.backup-20260428-160537/refs/remotes/origin/: main
.git.backup-20260428-160537/worktrees/claw-code-tui/: AUTO_MERGE  COMMIT_EDITMSG  FETCH_HEAD  HEAD  gitdir  index
.git.backup-20260428-160537/worktrees/claw-code-tui/logs/: HEAD
.github/: FUNDING.yml
.github/scripts/: check_doc_source_of_truth.py
.github/workflows/: release.yml  rust-ci.yml
contrib/brew/: ninmu.rb
contrib/npm/: install.js  package.json
deploy/: Dockerfile  README.md  deploy.sh  docker-compose.yml  fly.toml.example
docs/: AGENT-INTEGRATION.md  FRAMEWORK-ADAPTERS-DESIGN.md  HARNESS-CONTRACT.md  HUMAN-DX.md  INTERAGENT-COMM-DESIGN.md  PI-MONO-PARITY-DESIGN.md  ROADMAP.md  TUI-INTERACTIVE-REVIEW-DESIGN.md  provider-implementation-plan.md  tui-syntax-highlighting-design.md
examples/harness/: task-request.json  task-result.json
python/ninmu_py/: pyproject.toml
python/ninmu_py/ninmu/: __init__.py  autogen_adapter.py  client.py  crewai_adapter.py  errors.py  langchain_adapter.py
python/ninmu_py/tests/: conftest.py  test_client.py
rust/: .gitignore  CLAUDE.md  MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  USAGE.md
rust/.omc/plans/: tui-enhancement-plan.md
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/tests/: provider_client_integration.rs  provider_http_integration.rs  provider_http_integration_phase2.rs
rust/crates/commands/: Cargo.toml
rust/crates/compat-harness/: Cargo.toml
rust/crates/mock-anthropic-service/: Cargo.toml
rust/crates/ninmu-api/: Cargo.toml
rust/crates/ninmu-api/benches/: caching_benchmark.rs  request_building.rs
rust/crates/ninmu-api/src/: client.rs  client_pool.rs  lib.rs  prompt_cache.rs  types.rs
rust/crates/ninmu-api/src/providers/: anthropic.rs  mod.rs  models_dev.rs  models_file.rs  openai_compat.rs
rust/crates/ninmu-api/tests/: client_integration.rs  models_file_e2e.rs  openai_compat_integration.rs  provider_client_integration.rs  provider_http_integration_phase2.rs  proxy_integration.rs
rust/crates/ninmu-cli/: Cargo.toml
rust/crates/ninmu-cli/src/: app.rs  args.rs  cli_commands.rs  file_ref.rs  init.rs  input.rs  main.rs  render.rs  rpc_client.rs  run_task.rs  task_events.rs  task_evidence.rs  task_sandbox.rs  worker_mode.rs
rust/crates/ninmu-cli/src/format/: cost.rs  errors.rs  model.rs  permissions.rs  sessions.rs  slash_help.rs  status.rs  tool_fmt.rs
rust/crates/ninmu-cli/src/tui/: diff_view.rs  event.rs  fullscreen.rs  markdown.rs  mod.rs  pager.rs  permission.rs  progress.rs  ratatui_app.rs  scrollback.rs  status_bar.rs  theme.rs  thinking.rs  timeline.rs  tool_panel.rs  turn_output.rs
rust/crates/ninmu-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs  run_task.rs  tui_e2e.rs  worker_mode.rs
rust/crates/ninmu-cli/tests/common/: mod.rs
rust/crates/ninmu-commands/: Cargo.toml
rust/crates/ninmu-commands/src/: lib.rs
rust/crates/ninmu-compat-harness/: Cargo.toml
rust/crates/ninmu-compat-harness/src/: lib.rs
rust/crates/ninmu-mock-anthropic-service/: Cargo.toml
rust/crates/ninmu-mock-anthropic-service/src/: lib.rs  main.rs
rust/crates/ninmu-plugins/: Cargo.toml
rust/crates/ninmu-plugins/src/: lib.rs
rust/crates/ninmu-runtime/: Cargo.toml
rust/crates/ninmu-runtime/src/: compact.rs  config.rs  config_validate.rs  conversation.rs  harness_contract.rs  lib.rs  oauth.rs  prompt.rs  session.rs  stale_base.rs  usage.rs
rust/crates/ninmu-runtime/tests/: harness_contract.rs  integration_tests.rs  oauth_flow_e2e.rs
rust/crates/ninmu-sdk/: Cargo.toml
rust/crates/ninmu-sdk/src/: conflict.rs  event_bus.rs  lib.rs  message_bus.rs  notification.rs  orchestrator.rs  policy_engine.rs  resource_loader.rs  rpc.rs  security.rs  session.rs  session_manager.rs  session_tree.rs  setup.rs  shared_staging.rs  tool_registry.rs
rust/crates/ninmu-sdk/tests/: smoke.rs
rust/crates/ninmu-telemetry/: Cargo.toml
rust/crates/ninmu-telemetry/tests/: smoke.rs
rust/crates/ninmu-tools/: Cargo.toml
rust/crates/ninmu-tools/src/: lane_completion.rs  lib.rs
rust/crates/plugins/: Cargo.toml
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: config.rs  conversation.rs  file_ops.rs  lib.rs  usage.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: app.rs  cli_commands.rs  init.rs  main.rs
rust/crates/sdk/: Cargo.toml
rust/crates/sdk/src/: lib.rs  notification.rs  orchestrator.rs  review.rs  rpc.rs  security.rs  session.rs  session_tree_log.rs  tool_registry.rs
rust/crates/sdk/tests/: smoke.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/tests/: smoke.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lane_completion.rs
rust/scripts/: memory_smoke_cli.sh  run_mock_parity_diff.py  run_mock_parity_harness.sh
scripts/: download.sh
src/: commands.py  parity_audit.py  task.py
tests/: test_porting_workspace.py  test_unit.py
(+33 files in other folders)
