[package]
name = "compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
commands = { version = "0.1.0", path = "../commands" }
tools = { version = "0.1.0", path = "../tools" }
runtime = { version = "0.1.0", path = "../runtime" }

[lints]
workspace = true
