[package]
name = "ninmu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Ninmu Code — agentic AI coding assistant for the terminal"
authors = ["deep-thinking-llc"]
homepage = "https://ninmu.dev"
repository = "https://github.com/deep-thinking-llc/claw-code"
keywords = ["ai", "coding", "assistant", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ninmu"
path = "src/main.rs"

[dependencies]
api = { version = "0.1.0", path = "../api" }
commands = { version = "0.1.0", path = "../commands" }
compat-harness = { version = "0.1.0", path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
reqwest = { version = "0.12", features = ["blocking"] }
rustyline = "15"
runtime = { version = "0.1.0", path = "../runtime" }
plugins = { version = "0.1.0", path = "../plugins" }
sdk = { version = "0.1.0", path = "../sdk" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tools = { version = "0.1.0", path = "../tools" }

[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { version = "0.1.0", path = "../mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

