[package]
name = "ninmu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Ninmu Code — agentic AI coding assistant for the terminal"
authors = ["deep-thinking-llc"]
homepage = "https://ninmu.dev"
repository = "https://github.com/deep-thinking-llc/claw-code"
keywords = ["ai", "coding", "assistant", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ninmu"
path = "src/main.rs"

[dependencies]
ninmu-api = { version = "0.1.0", path = "../ninmu-api" }
ninmu-commands = { version = "0.1.0", path = "../ninmu-commands" }
ninmu-compat-harness = { version = "0.1.0", path = "../ninmu-compat-harness" }
crossterm = "0.28"
gag = "1.0"
pulldown-cmark = "0.13"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking"] }
rustyline = "15"
unicode-width = "0.2"
ninmu-runtime = { version = "0.1.0", path = "../ninmu-runtime" }
ninmu-plugins = { version = "0.1.0", path = "../ninmu-plugins" }
ninmu-sdk = { version = "0.1.0", path = "../ninmu-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
ninmu-tools = { version = "0.1.0", path = "../ninmu-tools" }

[lints]
workspace = true

[dev-dependencies]
ninmu-mock-anthropic-service = { path = "../ninmu-mock-anthropic-service" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

