[package]
name = "ninmu-commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
homepage = "https://ninmu.dev"
description = "CLI commands for the Ninmu Code ecosystem"

[lints]
workspace = true

[dependencies]
ninmu-plugins = { version = "0.1.0", path = "../ninmu-plugins" }
ninmu-runtime = { version = "0.1.0", path = "../ninmu-runtime" }
serde_json.workspace = true
