[package]
name = "ninmu-compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
commands = { version = "0.1.0", path = "../ninmu-commands" }
tools = { version = "0.1.0", path = "../ninmu-tools" }
runtime = { version = "0.1.0", path = "../ninmu-runtime" }

[lints]
workspace = true
