[package]
name = "ninmu-compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
homepage = "https://ninmu.dev"
description = "Compatibility test harness for the Ninmu Code ecosystem"

[dependencies]
ninmu-commands = { version = "0.1.0", path = "../ninmu-commands" }
ninmu-tools = { version = "0.1.0", path = "../ninmu-tools" }
ninmu-runtime = { version = "0.1.0", path = "../ninmu-runtime" }

[lints]
workspace = true
