[package]
name = "ninmu-mock-anthropic-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ninmu-mock-anthropic-service"
path = "src/main.rs"

[dependencies]
api = { path = "../ninmu-api" }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }

[lints]
workspace = true
