[package]
name = "ninmu-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
homepage = "https://ninmu.dev"
description = "Plugin system for the Ninmu Code ecosystem"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
