[package]
name = "ninmu-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
homepage = "https://ninmu.dev"
description = "Conversation runtime and config for the Ninmu Code ecosystem"

[dependencies]
sha2 = "0.10"
glob = "0.3"
ninmu-plugins = { version = "0.1.0", path = "../ninmu-plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
ninmu-telemetry = { version = "0.1.0", path = "../ninmu-telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
