[package]
name = "ninmu-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
runtime = { version = "0.1.0", path = "../ninmu-runtime" }
tokio = { version = "1", features = ["sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[features]
default = ["rpc"]
rpc = []

[lints]
workspace = true
