[package]
name = "ninmu-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Built-in tool implementations for the Ninmu Code ecosystem"
homepage = "https://ninmu.dev"

[dependencies]
ninmu-api = { version = "0.1.0", path = "../ninmu-api" }
ninmu-commands = { version = "0.1.0", path = "../ninmu-commands" }
flate2 = "1"
ninmu-plugins = { version = "0.1.0", path = "../ninmu-plugins" }
ninmu-runtime = { version = "0.1.0", path = "../ninmu-runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
