[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
plugins = { version = "0.1.0", path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { version = "0.1.0", path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
